# idc-build-system

./: Cargo.toml  README.md
.github/workflows/: release.yml
openspec/changes/archive/2026-06-30-add-cmake-makefile-deno-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-add-cmake-makefile-deno-support/specs/cli-core/: spec.md
openspec/changes/archive/2026-06-30-add-cmake-makefile-deno-support/specs/toolchain-auto-install/: spec.md
openspec/changes/archive/2026-06-30-add-fmt-and-clean-commands/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-add-fmt-and-clean-commands/specs/cli-core/: spec.md
openspec/changes/archive/2026-06-30-add-github-actions-release-workflow/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-add-github-actions-release-workflow/specs/cli-core/: spec.md
openspec/changes/archive/2026-06-30-add-scripting-completions-cmake-targets/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-add-scripting-completions-cmake-targets/specs/cli-core/: spec.md
openspec/changes/archive/2026-06-30-fix-python-binary-checks/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-fix-python-binary-checks/specs/cli-core/: spec.md
openspec/changes/archive/2026-06-30-initialize-idc-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-initialize-idc-cli/specs/cli-core/: spec.md
openspec/specs/cli-core/: spec.md
openspec/specs/toolchain-auto-install/: spec.md
src/: adapters.rs  config.rs  detector.rs  installer.rs  main.rs
(+2 files in other folders)
