[package]
name = "idc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dialoguer = "0.11"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
which = "6.0"
clap_complete = "4.4"


